--- a/first-ajax-no-modules/index.html
+++ b/first-ajax-no-modules/index.html
@@ -14,6 +14,7 @@
         <input type="submit" value="Go" />
     </form>
     <ul class='results'></ul>
+    <div class="buttons"></div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
