--- a/first-ajax-no-modules/index.html
+++ b/first-ajax-no-modules/index.html
@@ -19,7 +19,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
     <script src="scripts/store.js"></script>
-    <script src="scripts/thinkful-tube.js"></script>
+    <script src = "scripts/API.js"></script>
+    <script src="scripts/videoList.js"></script>
     <script src="scripts/index.js"></script>
 </body>
 </html>
